@@ -38,6 +38,10 @@ next release
     organic/C6H12 - cyclohexane/Kerl-293K.yml
     organic/C6H12 - cyclohexane/Kerl-313K.yml
     organic/C6H12 - cyclohexane/Kerl-333K.yml
+  new data
+    organic/C2H2 - acetylene/Loria.yml
+  improved data
+    organic/CH4 - methane/Loria.yml
 
 2015-12-01
   better data (thanks to Elisa Sani)
